resized profile picture

--- a/styles.css
+++ b/styles.css
@@ -29,11 +29,6 @@ h3 {
     padding-top: 100px;
 }
 
-.middle-container {
-
-
-.bottom-container {
-
 
 .skill-row {
     width: 50%;
@@ -56,3 +51,4 @@ h3 {
     position: absolute;
     left: 300px;
     bottom: 300px;
+}
